# Gradio_Universal_WebUI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.bat
adapters/: __init__.py  base.py  fastwhisper.py  llm_translator.py  qwen3_asr.py  qwen3_streaming.py  qwen3_tts.py  rembg.py  stable_diffusion.py  waifu2x.py  whisperx.py
config/: services.yaml  webui.yaml
core/: __init__.py  auth.py  config_service.py  event_bus.py  gpu_allocator.py  gpu_monitor.py  health_checker.py  logging_setup.py  process_manager.py  result_manager.py  service_record.py  service_registry.py  system_monitor.py  task_scheduler.py  ws_bridge.py
services/: Dockerfile.fastwhisper  Dockerfile.qwen3  Dockerfile.sd  Dockerfile.whisperx  __init__.py  fastwhisper_service.py  llm_translator_service.py  qwen3_asr_service.py  qwen3_tts_service.py  rembg_service.py  stable_diffusion_service.py  waifu2x_service.py  whisperx_service.py
tests/: conftest.py  test_adapters.py  test_auth.py  test_config_service.py  test_event_bus.py  test_gpu_monitor.py  test_health_checker.py  test_process_manager.py  test_result_manager.py  test_service_registry.py  test_task_scheduler.py  test_waifu2x_adapter.py  test_waifu2x_page.py  test_waifu2x_service.py  test_ws_bridge.py
utils/: git_auto_push.py
webui/: app.py  state.py
webui/components/: __init__.py  config_editor.py  error_display.py  gpu_dashboard.py  progress_indicator.py  service_table.py  task_list.py
webui/pages/: __init__.py  config.py  dashboard.py  fastwhisper.py  gpu.py  (+12 more)
(+18 files in other folders)
