[project]
name = "gradio-universal-webui"
version = "0.1.0"
description = "基于 Gradio 的统一 AI 前端套件 — 管理本地 AI 负载"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}

dependencies = [
    "gradio>=5.0",
    "pyyaml>=6.0",
    "nvidia-ml-py>=12.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["webui*", "core*", "adapters*"]